@@ -1,8 +1,9 @@
 HHexen ChangeLog
 
 v1.6.3
- - verified successful compilation using clang-3.0.
- - verified successful compilation using gcc-4.6.
+ - verified successful compilation using clang-3.0/3.1.
+ - verified successful compilation using gcc-4.6/4.7.
+ - recognize Hexen wads from Mac port by Presage and display proper credits page
 
 v1.6.2
  - reject the old (beta) PC demo (from hexen.zip, "Released October 2nd, 1995").
